# cmake-generate-lib-config

./: CMakeLists.txt  Copyright.txt  README.md  example.c  example.h  lib-config.in
Modules/: GenerateConfig.cmake  GenerateLibConfig.cmake  SelectImportedConfig.cmake  SplitLibraryToCFlag.cmake  SplitLibraryToCFlags.cmake  lib-config.in
